--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ header {
 <script type="text/javascript" src="https://cdn.emailjs.com/sdk/3.2/email.min.js"></script>
 <script type="text/javascript">
   // Initialize EmailJS with your user ID
-  emailjs.init("J5C31ikXLLyhyLsdT");
+  emailjs.init("user_J5C31ikXLLyhyLsdT");
 </script>
 
 <script>
