--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ body {
     background: #3b2a1a;
 }
 
+/* ===== HEADER ===== */
 header {
     background: #4c9a58;
     color: #fff;
@@ -25,6 +26,7 @@ header {
     border-bottom: 6px solid #3b2615;
 }
 
+/* ===== BOARD ===== */
 #board {
     max-width: 1200px;
     margin: 30px auto;
@@ -37,6 +39,7 @@ header {
     gap: 20px;
 }
 
+/* ===== SIGNS ===== */
 .sign {
     background: linear-gradient(#2f5d3a, #24492d);
     color: #fff;
@@ -49,6 +52,7 @@ header {
     border: 4px solid #1c3722;
 }
 
+/* ===== MAP PANEL ===== */
 #mapPanel {
     background: #e6d7b8;
     border: 6px solid #3b2615;
@@ -60,6 +64,17 @@ header {
     border: 4px solid #5a4028;
     position: relative;
     z-index: 1;
+}
+
+.leaflet-container {
+    z-index: 1 !important;
+}
+
+/* ===== SCHEDULE PANEL ===== */
+#schedulePanel {
+    background: #4a2f19;
+    border: 6px solid #3b2615;
+    padding: 10px;
 }
 
 .scheduleBtn {
@@ -90,6 +105,7 @@ header {
 .yellow{ background: #c9a227; }
 .red   { background: #a33b2e; }
 
+/* ===== MODAL FORM ===== */
 #modal {
     display: none;
     position: fixed;
@@ -145,23 +161,44 @@ header {
 
 <div id="board">
 
+    <!-- MAP -->
     <div id="mapPanel">
         <div class="sign">🧭 EXPLORE THE AREA</div>
         <div id="map"></div>
     </div>
 
+    <!-- SCHEDULE -->
     <div id="schedulePanel">
         <div class="sign">📅 CLICKABLE SCHEDULE</div>
-        <div class="scheduleBtn green" onclick="openForm('Jan. 18, Feb. 18, March 18 - Cleanup')">Jan. 18, Feb. 18, March 18 - Cleanup <span>CLICK</span></div>
-        <div class="scheduleBtn blue" onclick="openForm('Apr. 18, May 18, June 18 - Cleanup')">Apr. 18, May 18, June 18 - Cleanup <span>CLICK</span></div>
-        <div class="scheduleBtn orange" onclick="openForm('July 18, Aug. 18, Sept. 18 - Cleanup')">July 18, Aug. 18, Sept. 18 - Cleanup <span>CLICK</span></div>
-        <div class="scheduleBtn teal" onclick="openForm('October 18 - Cleanup')">October 18 - Cleanup <span>CLICK</span></div>
-        <div class="scheduleBtn yellow" onclick="openForm('November 18 - Cleanup')">November 18 - Cleanup <span>CLICK</span></div>
-        <div class="scheduleBtn red" onclick="openForm('December 18 - Campfire Gathering')">December 18 - Campfire Gathering <span>CLICK</span></div>
+
+        <div class="scheduleBtn green" onclick="openForm('Jan. 18, Feb. 18, March 18 - Cleanup')">
+            Jan. 18, Feb. 18, March 18 - Cleanup <span>CLICK</span>
+        </div>
+
+        <div class="scheduleBtn blue" onclick="openForm('Apr. 18, May 18, June 18 - Cleanup')">
+            Apr. 18, May 18, June 18 - Cleanup <span>CLICK</span>
+        </div>
+
+        <div class="scheduleBtn orange" onclick="openForm('July 18, Aug. 18, Sept. 18 - Cleanup')">
+            July 18, Aug. 18, Sept. 18 - Cleanup <span>CLICK</span>
+        </div>
+
+        <div class="scheduleBtn teal" onclick="openForm('October 18 - Cleanup')">
+            October 18 - Cleanup <span>CLICK</span>
+        </div>
+
+        <div class="scheduleBtn yellow" onclick="openForm('November 18 - Cleanup')">
+            November 18 - Cleanup <span>CLICK</span>
+        </div>
+
+        <div class="scheduleBtn red" onclick="openForm('December 18 - Campfire Gathering')">
+            December 18 - Campfire Gathering <span>CLICK</span>
+        </div>
     </div>
 
 </div>
 
+<!-- MODAL -->
 <div id="modal">
     <div id="modalBox">
         <h3>Event Sign-Up</h3>
@@ -175,23 +212,36 @@ header {
     </div>
 </div>
 
+<!-- LEAFLET MAP -->
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+<!-- EMAILJS SDK -->
 <script src="https://cdn.emailjs.com/sdk/3.2/email.min.js"></script>
+<script>
+  // Initialize EmailJS
+  emailjs.init("J5C31ikXLLyhyLsdT"); // Your EmailJS User ID
+</script>
 
 <script>
-emailjs.init("J5C31ikXLLyhyLsdT"); // Your EmailJS User ID
-
-// ===== MAP =====
+/* ===== MAP ===== */
 const map = L.map('map').setView([13.9462608,120.94088389], 15);
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
 
+// Example polygons
 const polygons = [
   {coords:[[13.94965871,120.9408106],[13.94969433,120.94081056],[13.94973678,120.94102123],[13.9497206,120.94101883]], popup:"Needs Cleaning"},
-  {coords:[[13.95019297,120.93941406],[13.95023971,120.93943898],[13.95015354,120.93954712],[13.950148107,120.93954624]], popup:"Needs Cleaning"}
+  {coords:[[13.95019297,120.93941406],[13.95023971,120.93943898],[13.95015354,120.93954712],[13.950148107,120.93954624]], popup:"Needs Cleaning"},
+  {coords:[[13.9501333,120.93956394],[13.95015034,120.93955586],[13.95008737,120.9400602],[13.95007683,120.94006699]], popup:"Needs Cleaning"},
+  {coords:[[13.94760165,120.94475761],[13.94760053,120.94474366],[13.94826218,120.94444513],[13.94827686,120.94449015]], popup:"Needs Cleaning"}
 ];
-polygons.forEach(p => L.polygon(p.coords, {color:'red', fillColor:'#f56565', fillOpacity:0.6}).addTo(map).bindPopup(p.popup));
 
+polygons.forEach(p => {
+  L.polygon(p.coords, {color:'red', fillColor:'#f56565', fillOpacity:0.6}).addTo(map).bindPopup(p.popup);
+});
+
+/* ===== MODAL LOGIC ===== */
 let chosenSchedule = "";
+
 function openForm(schedule){
     chosenSchedule = schedule;
     document.getElementById("selectedSchedule").innerText = "Selected: " + schedule;
@@ -199,12 +249,14 @@ function openForm(schedule){
     map.dragging.disable();
     map.scrollWheelZoom.disable();
 }
+
 function closeForm(){
     document.getElementById("modal").style.display = "none";
     map.dragging.enable();
     map.scrollWheelZoom.enable();
 }
 
+/* ===== EMAILJS FORM SUBMISSION ===== */
 function submitForm(){
     const name = document.getElementById("name").value.trim();
     const contact = document.getElementById("contact").value.trim();
@@ -223,18 +275,18 @@ function submitForm(){
     const templateParams = {
         from_name: name,
         from_email: email,
-        reply_to: email,           // important: replies go to the user
+        reply_to: email,
         contact: contact,
         schedule: chosenSchedule
     };
 
-    emailjs.send("service_yhv7tg9","template_8jpvutf", templateParams)
-    .then(function(response){
-        alert("Thank you for signing up! A confirmation email has been sent to " + email);
+    emailjs.send("service_yhv7tg9", "template_8jpvutf", templateParams)
+    .then(response => {
+        alert("Thank you! Confirmation email sent to " + email);
         closeForm();
-    }, function(error){
-        console.log(error);
-        alert("Sign-up successful, but email could not be sent. Please check your EmailJS service.");
+    }, error => {
+        console.error(error);
+        alert("Sign-up successful, but confirmation email could not be sent. Check your EmailJS service.");
         closeForm();
     });
 }
