--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
 
 <style>
 * { box-sizing: border-box; }
-
-body {
-    margin: 0;
-    font-family: "Trebuchet MS", Arial, sans-serif;
-    background: #3b2a1a;
-}
+body { margin: 0; font-family: "Trebuchet MS", Arial, sans-serif; background: #3b2a1a; }
 
 /* ===== HEADER ===== */
 header {
@@ -53,105 +48,23 @@ header {
 }
 
 /* ===== MAP PANEL ===== */
-#mapPanel {
-    background: #e6d7b8;
-    border: 6px solid #3b2615;
-    padding: 10px;
-}
-
-#map {
-    height: 420px;
-    border: 4px solid #5a4028;
-    position: relative;
-    z-index: 1;
-}
-
-.leaflet-container {
-    z-index: 1 !important;
-}
+#mapPanel { background: #e6d7b8; border: 6px solid #3b2615; padding: 10px; }
+#map { height: 420px; border: 4px solid #5a4028; position: relative; z-index: 1; }
+.leaflet-container { z-index: 1 !important; }
 
 /* ===== SCHEDULE PANEL ===== */
-#schedulePanel {
-    background: #4a2f19;
-    border: 6px solid #3b2615;
-    padding: 10px;
-}
+#schedulePanel { background: #4a2f19; border: 6px solid #3b2615; padding: 10px; }
+.scheduleBtn { display: flex; justify-content: space-between; align-items: center; padding: 14px; margin-bottom: 10px; border-radius: 6px; font-weight: bold; color: #fff; cursor: pointer; border: 3px solid rgba(0,0,0,0.3); }
+.scheduleBtn span { background: #eee; color: #333; padding: 6px 10px; border-radius: 6px; font-size: 12px; }
+.green { background: #3f7f4f; } .blue { background: #3a6fa5; } .orange { background: #c26a1b; } 
+.teal { background: #2c7c7b; } .yellow { background: #c9a227; } .red { background: #a33b2e; }
 
-.scheduleBtn {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 14px;
-    margin-bottom: 10px;
-    border-radius: 6px;
-    font-weight: bold;
-    color: #fff;
-    cursor: pointer;
-    border: 3px solid rgba(0,0,0,0.3);
-}
-
-.scheduleBtn span {
-    background: #eee;
-    color: #333;
-    padding: 6px 10px;
-    border-radius: 6px;
-    font-size: 12px;
-}
-
-.green { background: #3f7f4f; }
-.blue  { background: #3a6fa5; }
-.orange{ background: #c26a1b; }
-.teal  { background: #2c7c7b; }
-.yellow{ background: #c9a227; }
-.red   { background: #a33b2e; }
-
-/* ===== MODAL FORM ===== */
-#modal {
-    display: none;
-    position: fixed;
-    inset: 0;
-    background: rgba(0,0,0,0.7);
-    align-items: center;
-    justify-content: center;
-    z-index: 9999;
-}
-
-#modalBox {
-    background: #fffdf4;
-    padding: 20px;
-    width: 320px;
-    border-radius: 10px;
-    border: 5px solid #4c9a58;
-}
-
-#modalBox h3 {
-    margin-top: 0;
-    text-align: center;
-}
-
-#modalBox input {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-}
-
-#modalBox button {
-    width: 100%;
-    padding: 10px;
-    background: #4c9a58;
-    color: #fff;
-    border: none;
-    font-weight: bold;
-    border-radius: 6px;
-    cursor: pointer;
-}
-
-.close {
-    text-align: center;
-    margin-top: 8px;
-    cursor: pointer;
-    color: #c0392b;
-}
+/* ===== MODAL ===== */
+#modal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.7); align-items: center; justify-content: center; z-index: 9999; }
+#modalBox { background: #fffdf4; padding: 20px; width: 320px; border-radius: 10px; border: 5px solid #4c9a58; text-align:center; }
+#modalBox input { width: 100%; padding: 8px; margin-bottom: 10px; }
+#modalBox button { width: 100%; padding: 10px; background: #4c9a58; color: #fff; border: none; font-weight: bold; border-radius: 6px; cursor: pointer; }
+.close { text-align: center; margin-top: 8px; cursor: pointer; color: #c0392b; }
 </style>
 </head>
 
@@ -160,7 +73,6 @@ header {
 <header>Subic Ibaba Eco-Action</header>
 
 <div id="board">
-
     <!-- MAP -->
     <div id="mapPanel">
         <div class="sign">🧭 EXPLORE THE AREA</div>
@@ -170,32 +82,25 @@ header {
     <!-- SCHEDULE -->
     <div id="schedulePanel">
         <div class="sign">📅 CLICKABLE SCHEDULE</div>
-
         <div class="scheduleBtn green" onclick="openForm('Jan. 18, Feb. 18, March 18 - Cleanup')">
             Jan. 18, Feb. 18, March 18 - Cleanup <span>CLICK</span>
         </div>
-
         <div class="scheduleBtn blue" onclick="openForm('Apr. 18, May 18, June 18 - Cleanup')">
             Apr. 18, May 18, June 18 - Cleanup <span>CLICK</span>
         </div>
-
         <div class="scheduleBtn orange" onclick="openForm('July 18, Aug. 18, Sept. 18 - Cleanup')">
             July 18, Aug. 18, Sept. 18 - Cleanup <span>CLICK</span>
         </div>
-
         <div class="scheduleBtn teal" onclick="openForm('October 18 - Cleanup')">
             October 18 - Cleanup <span>CLICK</span>
         </div>
-
         <div class="scheduleBtn yellow" onclick="openForm('November 18 - Cleanup')">
             November 18 - Cleanup <span>CLICK</span>
         </div>
-
         <div class="scheduleBtn red" onclick="openForm('December 18 - Campfire Gathering')">
             December 18 - Campfire Gathering <span>CLICK</span>
         </div>
     </div>
-
 </div>
 
 <!-- MODAL -->
@@ -218,11 +123,8 @@ header {
 <!-- EMAILJS SDK -->
 <script src="https://cdn.emailjs.com/sdk/3.2/email.min.js"></script>
 <script>
-  // Initialize EmailJS
-  emailjs.init("J5C31ikXLLyhyLsdT"); // Your EmailJS User ID
-</script>
+emailjs.init("J5C31ikXLLyhyLsdT"); // Your EmailJS User ID
 
-<script>
 /* ===== MAP ===== */
 const map = L.map('map').setView([13.9462608,120.94088389], 15);
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
@@ -230,18 +132,12 @@ L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
 // Example polygons
 const polygons = [
   {coords:[[13.94965871,120.9408106],[13.94969433,120.94081056],[13.94973678,120.94102123],[13.9497206,120.94101883]], popup:"Needs Cleaning"},
-  {coords:[[13.95019297,120.93941406],[13.95023971,120.93943898],[13.95015354,120.93954712],[13.950148107,120.93954624]], popup:"Needs Cleaning"},
-  {coords:[[13.9501333,120.93956394],[13.95015034,120.93955586],[13.95008737,120.9400602],[13.95007683,120.94006699]], popup:"Needs Cleaning"},
-  {coords:[[13.94760165,120.94475761],[13.94760053,120.94474366],[13.94826218,120.94444513],[13.94827686,120.94449015]], popup:"Needs Cleaning"}
+  {coords:[[13.95019297,120.93941406],[13.95023971,120.93943898],[13.95015354,120.93954712],[13.950148107,120.93954624]], popup:"Needs Cleaning"}
 ];
-
-polygons.forEach(p => {
-  L.polygon(p.coords, {color:'red', fillColor:'#f56565', fillOpacity:0.6}).addTo(map).bindPopup(p.popup);
-});
+polygons.forEach(p => L.polygon(p.coords, {color:'red', fillColor:'#f56565', fillOpacity:0.6}).addTo(map).bindPopup(p.popup));
 
 /* ===== MODAL LOGIC ===== */
 let chosenSchedule = "";
-
 function openForm(schedule){
     chosenSchedule = schedule;
     document.getElementById("selectedSchedule").innerText = "Selected: " + schedule;
@@ -249,7 +145,6 @@ function openForm(schedule){
     map.dragging.disable();
     map.scrollWheelZoom.disable();
 }
-
 function closeForm(){
     document.getElementById("modal").style.display = "none";
     map.dragging.enable();
@@ -274,19 +169,19 @@ function submitForm(){
 
     const templateParams = {
         from_name: name,
-        from_email: email,
-        reply_to: email,
+        from_email: "calderonjuleanzendro@gmail.com", // Verified sender
+        reply_to: email, // User email
         contact: contact,
         schedule: chosenSchedule
     };
 
-    emailjs.send("service_yhv7tg9", "template_8jpvutf", templateParams)
-    .then(response => {
+    emailjs.send("service_yhv7tg9","template_8jpvutf", templateParams)
+    .then(res => {
         alert("Thank you! Confirmation email sent to " + email);
         closeForm();
-    }, error => {
-        console.error(error);
-        alert("Sign-up successful, but confirmation email could not be sent. Check your EmailJS service.");
+    }, err => {
+        console.error(err);
+        alert("Sign-up successful, but email could not be sent. Check EmailJS setup.");
         closeForm();
     });
 }
