--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ header {
 <!-- EMAILJS SDK -->
 <script src="https://cdn.emailjs.com/sdk/3.2/email.min.js"></script>
 <script>
-emailjs.init("J5C31ikXLLyhyLsdT"); // Your EmailJS User ID
+emailjs.init("J5C31ikXLLyhyLsdT");
 
 /* ===== MAP ===== */
 const map = L.map('map').setView([13.9462608,120.94088389], 15);
