--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 
 <style>
 * { box-sizing: border-box; }
-body { margin: 0; font-family: "Trebuchet MS", Arial, sans-serif; background: #3b2a1a; }
+
+body {
+    margin: 0;
+    font-family: "Trebuchet MS", Arial, sans-serif;
+    background: #3b2a1a;
+}
 
 /* ===== HEADER ===== */
 header {
@@ -21,7 +26,7 @@ header {
     border-bottom: 6px solid #3b2615;
 }
 
-/* ===== BOARD ===== */
+/* ===== BULLETIN BOARD ===== */
 #board {
     max-width: 1200px;
     margin: 30px auto;
@@ -48,23 +53,99 @@ header {
 }
 
 /* ===== MAP PANEL ===== */
-#mapPanel { background: #e6d7b8; border: 6px solid #3b2615; padding: 10px; }
-#map { height: 420px; border: 4px solid #5a4028; position: relative; z-index: 1; }
-.leaflet-container { z-index: 1 !important; }
+#mapPanel {
+    background: #e6d7b8;
+    border: 6px solid #3b2615;
+    padding: 10px;
+}
+
+#map {
+    height: 420px;
+    border: 4px solid #5a4028;
+}
+
+.leaflet-container {
+    z-index: 1 !important;
+}
 
 /* ===== SCHEDULE PANEL ===== */
-#schedulePanel { background: #4a2f19; border: 6px solid #3b2615; padding: 10px; }
-.scheduleBtn { display: flex; justify-content: space-between; align-items: center; padding: 14px; margin-bottom: 10px; border-radius: 6px; font-weight: bold; color: #fff; cursor: pointer; border: 3px solid rgba(0,0,0,0.3); }
-.scheduleBtn span { background: #eee; color: #333; padding: 6px 10px; border-radius: 6px; font-size: 12px; }
-.green { background: #3f7f4f; } .blue { background: #3a6fa5; } .orange { background: #c26a1b; } 
-.teal { background: #2c7c7b; } .yellow { background: #c9a227; } .red { background: #a33b2e; }
+#schedulePanel {
+    background: #4a2f19;
+    border: 6px solid #3b2615;
+    padding: 10px;
+}
 
-/* ===== MODAL ===== */
-#modal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.7); align-items: center; justify-content: center; z-index: 9999; }
-#modalBox { background: #fffdf4; padding: 20px; width: 320px; border-radius: 10px; border: 5px solid #4c9a58; text-align:center; }
-#modalBox input { width: 100%; padding: 8px; margin-bottom: 10px; }
-#modalBox button { width: 100%; padding: 10px; background: #4c9a58; color: #fff; border: none; font-weight: bold; border-radius: 6px; cursor: pointer; }
-.close { text-align: center; margin-top: 8px; cursor: pointer; color: #c0392b; }
+.scheduleBtn {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 14px;
+    margin-bottom: 10px;
+    border-radius: 6px;
+    font-weight: bold;
+    color: #fff;
+    cursor: pointer;
+    border: 3px solid rgba(0,0,0,0.3);
+}
+
+.scheduleBtn span {
+    background: #eee;
+    color: #333;
+    padding: 6px 10px;
+    border-radius: 6px;
+    font-size: 12px;
+}
+
+.green { background: #3f7f4f; }
+.blue  { background: #3a6fa5; }
+.orange{ background: #c26a1b; }
+.teal  { background: #2c7c7b; }
+.yellow{ background: #c9a227; }
+.red   { background: #a33b2e; }
+
+/* ===== MODAL FORM ===== */
+#modal {
+    display: none;
+    position: fixed;
+    inset: 0;
+    background: rgba(0,0,0,0.7);
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+}
+
+#modalBox {
+    background: #fffdf4;
+    padding: 20px;
+    width: 320px;
+    border-radius: 10px;
+    border: 5px solid #4c9a58;
+    text-align: center;
+}
+
+#modalBox input {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+}
+
+#modalBox button {
+    width: 100%;
+    padding: 10px;
+    background: #4c9a58;
+    color: #fff;
+    border: none;
+    font-weight: bold;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.close {
+    text-align: center;
+    margin-top: 8px;
+    cursor: pointer;
+    color: #c0392b;
+}
 </style>
 </head>
 
@@ -73,6 +154,7 @@ header {
 <header>Subic Ibaba Eco-Action</header>
 
 <div id="board">
+
     <!-- MAP -->
     <div id="mapPanel">
         <div class="sign">🧭 EXPLORE THE AREA</div>
@@ -82,28 +164,35 @@ header {
     <!-- SCHEDULE -->
     <div id="schedulePanel">
         <div class="sign">📅 CLICKABLE SCHEDULE</div>
+
         <div class="scheduleBtn green" onclick="openForm('Jan. 18, Feb. 18, March 18 - Cleanup')">
             Jan. 18, Feb. 18, March 18 - Cleanup <span>CLICK</span>
         </div>
+
         <div class="scheduleBtn blue" onclick="openForm('Apr. 18, May 18, June 18 - Cleanup')">
             Apr. 18, May 18, June 18 - Cleanup <span>CLICK</span>
         </div>
+
         <div class="scheduleBtn orange" onclick="openForm('July 18, Aug. 18, Sept. 18 - Cleanup')">
             July 18, Aug. 18, Sept. 18 - Cleanup <span>CLICK</span>
         </div>
+
         <div class="scheduleBtn teal" onclick="openForm('October 18 - Cleanup')">
             October 18 - Cleanup <span>CLICK</span>
         </div>
+
         <div class="scheduleBtn yellow" onclick="openForm('November 18 - Cleanup')">
             November 18 - Cleanup <span>CLICK</span>
         </div>
+
         <div class="scheduleBtn red" onclick="openForm('December 18 - Campfire Gathering')">
             December 18 - Campfire Gathering <span>CLICK</span>
         </div>
     </div>
+
 </div>
 
-<!-- MODAL -->
+<!-- SIGN-UP MODAL -->
 <div id="modal">
     <div id="modalBox">
         <h3>Event Sign-Up</h3>
@@ -121,67 +210,81 @@ header {
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
 <!-- EMAILJS SDK -->
-<script src="https://cdn.emailjs.com/sdk/3.2/email.min.js"></script>
-<script>
-emailjs.init("J5C31ikXLLyhyLsdT");
+<script type="text/javascript" src="https://cdn.emailjs.com/sdk/3.2/email.min.js"></script>
+<script type="text/javascript">
+emailjs.init("J5C31ikXLLyhyLsdT"); // Your EmailJS User ID
+</script>
 
+<script>
 /* ===== MAP ===== */
 const map = L.map('map').setView([13.9462608,120.94088389], 15);
-L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    attribution: '&copy; OpenStreetMap contributors'
+}).addTo(map);
 
-// Example polygons
+// Polygons with all coordinates
 const polygons = [
   {coords:[[13.94965871,120.9408106],[13.94969433,120.94081056],[13.94973678,120.94102123],[13.9497206,120.94101883]], popup:"Needs Cleaning"},
-  {coords:[[13.95019297,120.93941406],[13.95023971,120.93943898],[13.95015354,120.93954712],[13.950148107,120.93954624]], popup:"Needs Cleaning"}
+  {coords:[[13.95019297,120.93941406],[13.95023971,120.93943898],[13.95015354,120.93954712],[13.950148107,120.93954624]], popup:"Needs Cleaning"},
+  {coords:[[13.9501333,120.93956394],[13.95015034,120.93955586],[13.95008737,120.9400602],[13.95007683,120.94006699]], popup:"Needs Cleaning"},
+  {coords:[[13.94760165,120.94475761],[13.94760053,120.94474366],[13.94826218,120.94444513],[13.94827686,120.94449015]], popup:"Needs Cleaning"}
 ];
-polygons.forEach(p => L.polygon(p.coords, {color:'red', fillColor:'#f56565', fillOpacity:0.6}).addTo(map).bindPopup(p.popup));
+
+polygons.forEach(p => {
+  L.polygon(p.coords, {color:'red', fillColor:'#f56565', fillOpacity:0.6}).addTo(map).bindPopup(p.popup);
+});
+
+// Fix map size inside grid
+setTimeout(() => { map.invalidateSize(); }, 200);
 
 /* ===== MODAL LOGIC ===== */
 let chosenSchedule = "";
-function openForm(schedule){
+
+function openForm(schedule) {
     chosenSchedule = schedule;
     document.getElementById("selectedSchedule").innerText = "Selected: " + schedule;
     document.getElementById("modal").style.display = "flex";
     map.dragging.disable();
     map.scrollWheelZoom.disable();
 }
-function closeForm(){
+
+function closeForm() {
     document.getElementById("modal").style.display = "none";
     map.dragging.enable();
     map.scrollWheelZoom.enable();
 }
 
-/* ===== EMAILJS FORM SUBMISSION ===== */
-function submitForm(){
+/* ===== FORM SUBMISSION WITH EMAILJS ===== */
+function submitForm() {
     const name = document.getElementById("name").value.trim();
     const contact = document.getElementById("contact").value.trim();
     const email = document.getElementById("email").value.trim();
     const confirmEmail = document.getElementById("confirmEmail").value.trim();
 
-    if(!name || !contact || !email){
+    if (!name || !contact || !email) {
         alert("Please fill out all fields.");
         return;
     }
-    if(email !== confirmEmail){
+
+    if (email !== confirmEmail) {
         alert("Email and Confirm Email do not match.");
         return;
     }
 
     const templateParams = {
-        from_name: name,
-        from_email: "calderonjuleanzendro@gmail.com", // Verified sender
-        reply_to: email, // User email
+        user_name: name,
+        user_email: email,
         contact: contact,
-        schedule: chosenSchedule
+        schedule: chosenSchedule,
+        from_email: "calderonjuleanzendro@gmail.com" // your "from" email
     };
 
-    emailjs.send("service_yhv7tg9","template_8jpvutf", templateParams)
-    .then(res => {
-        alert("Thank you! Confirmation email sent to " + email);
+    emailjs.send("service_yhv7tg9", "template_8jpvutf", templateParams)
+    .then(function(response) {
+        alert("Thank you for signing up! A confirmation email has been sent to " + email);
         closeForm();
-    }, err => {
-        console.error(err);
-        alert("Sign-up successful, but email could not be sent. Check EmailJS setup.");
+    }, function(error) {
+        alert("Sign-up successful, but the confirmation email could not be sent. Please check your email or try again.");
         closeForm();
     });
 }
