--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ header {
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
 <!-- EMAILJS SDK -->
-<script type="text/javascript" src="https://cdn.emailjs.com/sdk/3.2/email.min.js"></script>
+<script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script type="text/javascript">
 emailjs.init("J5C31ikXLLyhyLsdT"); // Your EmailJS User ID
 </script>
