--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ header {
     border-bottom: 6px solid #3b2615;
 }
 
-/* ===== BULLETIN BOARD ===== */
+/* ===== BOARD ===== */
 #board {
     max-width: 1200px;
     margin: 30px auto;
@@ -101,7 +101,7 @@ header {
 .yellow{ background: #c9a227; }
 .red   { background: #a33b2e; }
 
-/* ===== MODAL FORM ===== */
+/* ===== MODAL ===== */
 #modal {
     display: none;
     position: fixed;
@@ -119,10 +119,6 @@ header {
     border-radius: 10px;
     border: 5px solid #4c9a58;
     text-align: center;
-}
-
-#modalBox h3 {
-    margin-top: 0;
 }
 
 #modalBox input {
@@ -150,7 +146,6 @@ header {
 }
 </style>
 </head>
-
 <body>
 
 <header>Subic Ibaba Eco-Action</header>
@@ -209,12 +204,13 @@ header {
 <!-- EMAILJS V4 SDK -->
 <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 <script>
-  emailjs.init({ publicKey: "J5C31ikXLLyhyLsdT" }); // Replace with your EmailJS public key
+  emailjs.init({ publicKey: "J5C31ikXLLyhyLsdT" });
 </script>
 
 <script>
 /* ===== MAP ===== */
-const map = L.map('map').setView([13.9462608,120.94088389], 15);
+const map = L.map('map', { scrollWheelZoom: true }).setView([13.9462608,120.94088389], 15);
+
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     attribution: '&copy; OpenStreetMap contributors'
 }).addTo(map);
@@ -231,8 +227,10 @@ polygons.forEach(p => {
   L.polygon(p.coords, {color:'red', fillColor:'#f56565', fillOpacity:0.6}).addTo(map).bindPopup(p.popup);
 });
 
-// Fix map size inside grid
-setTimeout(() => { map.invalidateSize(); }, 200);
+// Fix map size after page load
+window.addEventListener('load', () => {
+    setTimeout(() => { map.invalidateSize(); }, 300);
+});
 
 /* ===== MODAL LOGIC ===== */
 let chosenSchedule = "";
@@ -241,12 +239,14 @@ function openForm(schedule) {
     chosenSchedule = schedule;
     document.getElementById("selectedSchedule").innerText = "Selected: " + schedule;
     document.getElementById("modal").style.display = "flex";
+
     map.dragging.disable();
     map.scrollWheelZoom.disable();
 }
 
 function closeForm() {
     document.getElementById("modal").style.display = "none";
+
     map.dragging.enable();
     map.scrollWheelZoom.enable();
 }
@@ -272,17 +272,16 @@ function submitForm() {
         user_email: email,
         contact: contact,
         schedule: chosenSchedule,
-        message: Hi ${name},\n\nThank you for signing up for our event!\nYour selected schedule: ${chosenSchedule}.\n\nWe look forward to seeing you at the event!\n\n- Subic Ibaba Eco-Action Team
+        message: Hi ${name},\n\nThank you for signing up for our event!\nYour selected schedule: ${chosenSchedule}.\n\nWe look forward to seeing you!\n\n- Subic Ibaba Eco-Action Team
     };
 
     emailjs.send(
-        "service_yhv7tg9",     // Replace with your EmailJS service ID
-        "template_8jpvutf",    // Replace with your EmailJS template ID
+        "service_yhv7tg9",
+        "template_8jpvutf",
         templateParams,
         { publicKey: "J5C31ikXLLyhyLsdT" }
     ).then(function(response) {
         alert(Thank you, ${name}! A confirmation email has been sent to ${email}.);
-        // Clear form
         document.getElementById("name").value = "";
         document.getElementById("contact").value = "";
         document.getElementById("email").value = "";
